--- a/clients.html
+++ b/clients.html
@@ -230,8 +230,8 @@
             </div>
         </section>
         <section class="manufacturing">
+            <h2 class="main-caption-m container">Отрасли производства</h2>
             <div class="manufacturing__wrapper container">
-                <h2 class="main-caption-m">Отрасли производства</h2>
                 <div class="canvas__wrapper">
                     <canvas id="myChart" width="400" height="400"></canvas>
                     <div id="chartjs-tooltip" class="manufacturing-hover-elem">
@@ -285,8 +285,8 @@
             </div>
         </section>
         <section class="map-ukraine">
+            <h2 class="main-caption-m container">Наши клиенты со всей Украины</h2>
             <div class="map-ukraine__wrapper container">
-                <h2 class="main-caption-m">Наши клиенты со всей Украины</h2>
                 <div class="svg-map">
                     <svg class="svg-content" width="540" height="365" viewBox="0 0 540 365" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <mask id="mask0" mask-type="alpha" maskUnits="userSpaceOnUse" x="316" y="281" width="134" height="83">
