--- a/about-us.html
+++ b/about-us.html
@@ -128,7 +128,7 @@
         </section>
         <section class="about-company">
             <div class="about-company__wrapper container">
-                <h2 class="main-caption-m">О компании</h2>
+                <h2 class="main-caption-s">О компании</h2>
                 <div class="about-company__container">
                     <div class="about-company__info">
                         <div class="about-company__text">
