--- a/catalog.html
+++ b/catalog.html
@@ -134,7 +134,7 @@
         </section>
         <section class="catalog">
             <div class="catalog__wrapper container">
-                <h2 class="main-caption-m">Мероприятия</h2>
+                <h2 class="main-caption-s">Мероприятия</h2>
                 <div class="catalog__buttons">
                     <div class="filter__wrapper js-drop-item">
                         <button class="filter-mobile-button js-drop-button">
@@ -333,7 +333,7 @@
         </section>
         <section class="helpful-info">
             <div class="helpful-info__wrapper container">
-                <h2 class="main-caption-m">Полезная информация</h2>
+                <h2 class="main-caption-s">Полезная информация</h2>
                 <ul class="helpful-info__list">
                     <li class="helpful-info__item">
                         <div class="helpful-info__item__img" style="background-image: url(./img/helpful-img-1.png)"></div>
@@ -367,7 +367,7 @@
             </div>
         </section>
         <section class="seo-block">
-            <h2 class="main-caption-m">SEO - текст</h2>
+            <h2 class="main-caption-s">SEO - текст</h2>
             <div class="seo-block__wrapper container">
                 <h4 class="seo-caption-m">Подзаголовок</h4>
                 <p>Ви́кинги (дат. vikinger, швед. vikingar, норв. vikingene) — раннесредневековые скандинавские[1] мореходы в VIII—XI веках, совершавшие морские походы от Винланда до Биармии и Северной Африки. В основной массе это были племена в стадии разложения родоплеменного строя, жившие на территории современных Швеции, Дании и Норвегии, которых толкало за пределы родных стран перенаселение и голод[1]. По религиозной принадлежности викинги в подавляющем большинстве были язычниками[1</p>
