--- a/event-page.html
+++ b/event-page.html
@@ -131,7 +131,7 @@
         </section>
         <section class="event-page">
             <div class="event-page__wrapper container">
-                <h2 class="main-caption-m">Имплементация законодательных актов Европейского Союза в сфере охраны окружающей среды в правовую систему Украины</h2>
+                <h2 class="main-caption-s">Имплементация законодательных актов Европейского Союза в сфере охраны окружающей среды в правовую систему Украины</h2>
                 <p class="event-page__date"><strong>27.09-31.09</strong></p>
                 <div class="event-page__container">
                     <img class="event-page__img" src="./img/event-page-img.png" alt="Фото">
@@ -334,7 +334,7 @@
         </section>
         <section class="reserve-place">
             <div class="reserve-place__wrapper container">
-                <h2 class="main-caption-m"> Мы предлагаем забронировать место в отеле «АРКАДИЯ»</h2>
+                <h2 class="main-caption-s"> Мы предлагаем забронировать место в отеле «АРКАДИЯ»</h2>
                 <ul class="reserve-place__list">
                     <li class="reserve-place__item">
                         <h4 class="reserve-place__caption">Стандарт</h4>
@@ -379,7 +379,7 @@
         </section>
         <section class="organizer">
             <div class="organizer__wrapper container">
-                <h2 class="main-caption-m">Организатор</h2>
+                <h2 class="main-caption-s">Организатор</h2>
                 <div class="organizer__container">
                     <div class="organizer__info">
                         <h4 class="organizer__info__caption">Консультационный центр «УкрКонсалтинг»</h4>
@@ -408,7 +408,7 @@
         </section>
         <section class="reviews">
             <div class="reviews__wrapper container slider-infinity">
-                <h2 class="main-caption-m">Отзывы слушателей</h2>
+                <h2 class="main-caption-s">Отзывы слушателей</h2>
                 <ul class="reviews__list js-slider-list">
                     <li class="reviews__item show js-slider-item-infinity js-item">
                         <div class="content">
