--- a/faq.html
+++ b/faq.html
@@ -128,7 +128,7 @@
         </section>
         <section class="faq">
             <div class="faq__wrapper container">
-                <h2 class="main-caption-m">Часто задаваемые вопросы</h2>
+                <h2 class="main-caption-s">Часто задаваемые вопросы</h2>
                 <div class="faq__container">
                     <ul class="faq__list">
                         <li class="faq__item js-drop-item">
@@ -185,7 +185,7 @@
                         </li>
                     </ul>
                     <div class="ask-qustion__container">
-                        <h3 class="main-caption-m">Задайте свой вопрос</h3>
+                        <h3 class="main-caption-s">Задайте свой вопрос</h3>
                         <form action="#" class="ask-qustion__form">
                             <label class="input_wrapper">
                                 <span class="input-caption">Ваше имя</span>
