--- a/index.html
+++ b/index.html
@@ -803,7 +803,7 @@
                         <a href="tel: +38 (057) 751 01 64">+38 (057) 751 01 64</a>
                     </li>
                     <li class="footer-contact__item">
-                        <a href="#">г. Харьков, ул. Сумская 7</a>
+                        <a href="#">Украина, г.Харьков, пр.Тракторостроителей 83-е, 24</a>
                     </li>
                 </ul>
                 <p class="footer-id-company">р/с: № 26008052213769  в ПАТ КБ «Приватбанк», МФО 351533 ЗКПО 41519420</p>
