--- a/partnership.html
+++ b/partnership.html
@@ -128,7 +128,7 @@
         </section>
         <section class="partnership">
             <div class="partnership__wrapper container">
-                <h2 class="main-caption-m">Сотрудничество</h2>
+                <h2 class="main-caption-s">Сотрудничество</h2>
                 <ul class="partnership__list">
                     <li class="partnership__item">
                         <h4 class="caption">Сотрудничество с преподавательским составом</h4>
