--- a/plan-events.html
+++ b/plan-events.html
@@ -128,7 +128,7 @@
         </section>
         <section class="plan-events">
             <div class="plan-events__wrapper container">
-                <h2 class="main-caption-m">План мероприятий 2020</h2>
+                <h2 class="main-caption-s">План мероприятий 2020</h2>
                 <h3 class="main-caption-s calendar-caption">Календарь мероприятий</h3>
                 <div class="calendar__wrapper">
                     <div class="calendar__container">
@@ -591,7 +591,7 @@
         </section>
         <section class="notyfication">
             <div class="notyfication__wrapper container">
-                <h2 class="main-caption-m">Уведомления</h2>
+                <h2 class="main-caption-s">Уведомления</h2>
                 <p class="notyfication-sub">Как Вы хотели бы получать информацию о свежих мероприятиях?</p>
                 <form action="#" class="notyfication__form">
                      <div class="notyfication__list">
