--- a/clients.html
+++ b/clients.html
@@ -134,7 +134,7 @@
         </section>
         <section class="trust-us">
             <div class="trust-us__wrapper container">
-                <h2 class="main-caption-m">Наши клиенты</h2>
+                <h2 class="main-caption-s">Наши клиенты</h2>
                 <p class="trust-us__sub-info">Нам доверяют обучение своих сотрудников большинство крупнейших компаний Украины</p>
                 <ul class="trust-us__list">
                     <li class="trust-us__item">
@@ -230,12 +230,12 @@
             </div>
         </section>
         <section class="manufacturing">
-            <h2 class="main-caption-m container">Отрасли производства</h2>
+            <h2 class="main-caption-s container">Отрасли производства</h2>
             <div class="manufacturing__wrapper container">
                 <div class="canvas__wrapper">
-                    <canvas id="myChart" width="400" height="400"></canvas>
+                    <canvas id="myChart" width="365" height="350"></canvas>
                     <div id="chartjs-tooltip" class="manufacturing-hover-elem">
-                        <p></p>
+                        <div class="manufacturing-hover-active"></div>
                     </div>
                 </div>
                 <div id="myChartLegend" class="manufacturing__chart-list"></div>
@@ -285,7 +285,7 @@
             </div>
         </section>
         <section class="map-ukraine">
-            <h2 class="main-caption-m container">Наши клиенты со всей Украины</h2>
+            <h2 class="main-caption-s container">Наши клиенты со всей Украины</h2>
             <div class="map-ukraine__wrapper container">
                 <div class="svg-map">
                     <svg class="svg-content" width="540" height="365" viewBox="0 0 540 365" fill="none" xmlns="http://www.w3.org/2000/svg">
