--- a/contacts.html
+++ b/contacts.html
@@ -128,7 +128,7 @@
         </section>
         <section class="contacts">
             <div class="contacts__wrapper container">
-                <h2 class="main-caption-m">Контакты и реквизиты</h2>
+                <h2 class="main-caption-s">Контакты и реквизиты</h2>
                 <div class="contacts__container">
                     <div class="contacts__info">
                         <ul class="contacts__list">
@@ -139,14 +139,12 @@
                             </li>
                             <li class="contacts__item">
                                 <h5 class="contacts__item__caption">E-mail</h5>
-                                <a href="mailto: info@ukrc.net" class="contacts__item__descrip">info@ukrc.net</a>
+                                <a href="mailto: info@ukrc.net" class="contacts__item__descrip contacts__item__descrip-mail">info@ukrc.net</a>
                             </li>
                             <li class="contacts__item">
                                 <h5 class="contacts__item__caption">Адрес</h5>
-                                <a href="#" class="contacts__item__descrip">г. Харьков, ул. Сумская 7</a>
+                                <a href="#" class="contacts__item__descrip">Украина, г.Харьков, пр.Тракторостроителей 83-е, 24</a>
                             </li>
-                        </ul>
-                        <ul class="contacts__list">
                             <li class="contacts__item">
                                 <h5 class="contacts__item__caption">Расчётный счёт</h5>
                                 <p class="contacts__item__descrip">р/с: № 26008052213769 в ПАТ КБ «Приватбанк», МФО 351533 ЗКПО 41519420</p>
