--- a/corporate-events.html
+++ b/corporate-events.html
@@ -128,7 +128,7 @@
         </section>
         <section class="corporate-events">
             <div class="corporate-events__wrapper container">
-                <h2 class="main-caption-m">Корпоративные мероприятия</h2>
+                <h2 class="main-caption-s">Корпоративные мероприятия</h2>
             </div>
         </section>
     </main>
