--- a/clients.html
+++ b/clients.html
@@ -241,39 +241,63 @@
                 <div id="myChartLegend" class="manufacturing__chart-list"></div>
                 <div class="manufacturing__tablet">
                     <ul class="manufacturing__list">
-                        <li class="manufacturing__item">
+                        <li class="manufacturing__item js-statistic">
                             <div class="manufacturing__statistics">
-                                <p class="number">25%</p>
+                                <p class="number js-number"></p>
+                                <svg class="pie-chart" width="40" height="40"></svg>
                             </div>
                             <div class="manufacturing__info">
-                                <h5 class="name">Энергетические и сырьевые ресурсы</h5>
+                                <h5 class="name js-name"></h5>
                                 <a href="#" class="general-more">Подробнее</a>
                             </div>
                         </li>
-                        <li class="manufacturing__item">
+                        <li class="manufacturing__item js-statistic">
                             <div class="manufacturing__statistics">
-                                <p class="number">25%</p>
+                                <p class="number js-number"></p>
+                                <svg class="pie-chart" width="40" height="40"></svg>
                             </div>
                             <div class="manufacturing__info">
-                                <h5 class="name">Металлургия и металлообработка</h5>
+                                <h5 class="name js-name"></h5>
                                 <a href="#" class="general-more">Подробнее</a>
                             </div>
                         </li>
-                        <li class="manufacturing__item">
+                        <li class="manufacturing__item js-statistic">
                             <div class="manufacturing__statistics">
-                                <p class="number">25%</p>
+                                <p class="number js-number"></p>
+                                <svg class="pie-chart" width="40" height="40"></svg>
                             </div>
                             <div class="manufacturing__info">
-                                <h5 class="name">Машиностроение, оборудование </h5>
+                                <h5 class="name js-name"></h5>
                                 <a href="#" class="general-more">Подробнее</a>
                             </div>
                         </li>
-                        <li class="manufacturing__item">
+                        <li class="manufacturing__item js-statistic">
                             <div class="manufacturing__statistics">
-                                <p class="number">25%</p>
+                                <p class="number js-number"></p>
+                                <svg class="pie-chart" width="40" height="40"></svg>
                             </div>
                             <div class="manufacturing__info">
-                                <h5 class="name">Электрооборудование и устройства</h5>
+                                <h5 class="name js-name"></h5>
+                                <a href="#" class="general-more">Подробнее</a>
+                            </div>
+                        </li>
+                        <li class="manufacturing__item js-statistic">
+                            <div class="manufacturing__statistics">
+                                <p class="number js-number"></p>
+                                <svg class="pie-chart" width="40" height="40"></svg>
+                            </div>
+                            <div class="manufacturing__info">
+                                <h5 class="name js-name"></h5>
+                                <a href="#" class="general-more">Подробнее</a>
+                            </div>
+                        </li>
+                        <li class="manufacturing__item js-statistic">
+                            <div class="manufacturing__statistics">
+                                <p class="number js-number">25%</p>
+                                <svg class="pie-chart" width="40" height="40"></svg>
+                            </div>
+                            <div class="manufacturing__info">
+                                <h5 class="name js-name"></h5>
                                 <a href="#" class="general-more">Подробнее</a>
                             </div>
                         </li>
