--- a/clients.html
+++ b/clients.html
@@ -134,7 +134,7 @@
         </section>
         <section class="trust-us">
             <div class="trust-us__wrapper container">
-                <h2 class="main-caption-s">Наши клиенты</h2>
+                <h2 class="main-caption-m">Наши клиенты</h2>
                 <p class="trust-us__sub-info">Нам доверяют обучение своих сотрудников большинство крупнейших компаний Украины</p>
                 <ul class="trust-us__list">
                     <li class="trust-us__item">
@@ -312,7 +312,7 @@
             <h2 class="main-caption-s container">Наши клиенты со всей Украины</h2>
             <div class="map-ukraine__wrapper container">
                 <div class="svg-map">
-                    <svg class="svg-content" width="540" height="365" viewBox="0 0 540 365" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg class="svg-content" width="550" height="370" viewBox="0 0 540 365" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <mask id="mask0" mask-type="alpha" maskUnits="userSpaceOnUse" x="316" y="281" width="134" height="83">
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M316.008 281.12H449.572V363.806H316.008V281.12Z" fill="white"/>
                         </mask>
@@ -456,6 +456,7 @@
                         <li class="manufacturing__item">
                             <div class="manufacturing__statistics">
                                 <p class="number">25%</p>
+                                <div class="manufacturing__map-img" style="background-image:url(./img/part-map/vin-area.svg)"></div>
                             </div>
                             <div class="manufacturing__info">
                                 <h5 class="name">Винницкая  область</h5>
@@ -465,6 +466,7 @@
                         <li class="manufacturing__item">
                             <div class="manufacturing__statistics">
                                 <p class="number">25%</p>
+                                <div class="manufacturing__map-img" style="background-image:url(./img/part-map/kharkov-area.svg)"></div>
                             </div>
                             <div class="manufacturing__info">
                                 <h5 class="name">Харьковская  область</h5>
@@ -474,6 +476,7 @@
                         <li class="manufacturing__item">
                             <div class="manufacturing__statistics">
                                 <p class="number">25%</p>
+                                <div class="manufacturing__map-img" style="background-image:url(./img/part-map/odessa-area.svg)"></div>
                             </div>
                             <div class="manufacturing__info">
                                 <h5 class="name">Одесская область</h5>
@@ -483,6 +486,7 @@
                         <li class="manufacturing__item">
                             <div class="manufacturing__statistics">
                                 <p class="number">25%</p>
+                                <div class="manufacturing__map-img" style="background-image:url(./img/part-map/kiev-area.svg)"></div>
                             </div>
                             <div class="manufacturing__info">
                                 <h5 class="name">Киевская область</h5>
@@ -495,12 +499,11 @@
                     </button>
                 </div>
             </div>
-            
         </section>
         <section class="clients-callback">
             <div class="clients-callback__wrapper container">
                 <div class="wrapper">
-                    <h4>Присоединяйтесь</h4>
+                    <h4 class="main-caption-s">Присоединяйтесь</h4>
                     <p>Присоединятесь к передовым компаниям Украины в стремлении обучаться и получать качественную информационную поддержку</p>
                     <form action="#" class="clints-callback__form">
                         <label class="input_wrapper">
