--- a/contacts.html
+++ b/contacts.html
@@ -128,7 +128,7 @@
         </section>
         <section class="contacts">
             <div class="contacts__wrapper container">
-                <h2 class="main-caption-s">Контакты и реквизиты</h2>
+                <h2 class="main-caption-m">Контакты и реквизиты</h2>
                 <div class="contacts__container">
                     <div class="contacts__info">
                         <ul class="contacts__list">
