--- a/event-page.html
+++ b/event-page.html
@@ -131,8 +131,7 @@
         </section>
         <section class="event-page">
             <div class="event-page__wrapper container">
-                <h2 class="main-caption-s">Имплементация законодательных актов Европейского Союза в сфере охраны окружающей среды в правовую систему Украины</h2>
-                <p class="event-page__date"><strong>27.09-31.09</strong></p>
+                <h2 class="main-caption-m">Имплементация законодательных актов Европейского Союза в сфере охраны окружающей среды в правовую систему Украины</h2>
                 <div class="event-page__container">
                     <img class="event-page__img" src="./img/event-page-img.png" alt="Фото">
                     <div class="event-page__sort-info">
@@ -142,6 +141,14 @@
                             </p>
                             <p class="description">
                                 <strong>Харьков</strong>
+                            </p>
+                        </div>
+                        <div class="event-page__sort-info__item">
+                            <p class="type">
+                                <strong>Дата</strong>
+                            </p>
+                            <p class="description">
+                                <strong>27.09 - 31.09</strong>
                             </p>
                         </div>
                         <div class="event-page__sort-info__item">
@@ -156,9 +163,11 @@
                             <p class="type">
                                 <strong>Цена</strong>
                             </p>
-                            <div class="event-page__price">
+                            <div class="event-page__price js-drop-item">
                                 <p class="price">3 250 грн</p>
                                 <p class="old-price">3 850 грн</p>
+                                <button type="button" class="info-button js-drop-button"></button>
+                                <div class="info-drop"><p>Скидка действует при участии более двух человек с одного предприятия</p></div>
                             </div>
                         </div>
                     </div>
