--- a/plan-events.html
+++ b/plan-events.html
@@ -128,7 +128,7 @@
         </section>
         <section class="plan-events">
             <div class="plan-events__wrapper container">
-                <h2 class="main-caption-s">План мероприятий 2020</h2>
+                <h2 class="main-caption-m">План мероприятий 2020</h2>
                 <h3 class="main-caption-s calendar-caption">Календарь мероприятий</h3>
                 <div class="calendar__wrapper">
                     <div class="calendar__container">
