--- a/faq.html
+++ b/faq.html
@@ -128,7 +128,7 @@
         </section>
         <section class="faq">
             <div class="faq__wrapper container">
-                <h2 class="main-caption-s">Часто задаваемые вопросы</h2>
+                <h2 class="main-caption-m">Часто задаваемые вопросы</h2>
                 <div class="faq__container">
                     <ul class="faq__list">
                         <li class="faq__item js-drop-item">
@@ -153,7 +153,7 @@
                             </div>
                             <div class="faq__answer">
                                 <div class="faq__answer__text">
-                                    <p>Планы проведения семинаров и тренингов могут редактироваться, дополняться мероприятиями по актуальной тематике/p>
+                                    <p>Планы проведения семинаров и тренингов могут редактироваться, дополняться мероприятиями по актуальной тематике</p>
                                 </div>
                             </div>
                         </li>
