--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@
                             </div>
                         </li>
                     </ul>
-                    <div class="buttons__wrapper js-arrow-infinity js-item">
+                    <div class="buttons__wrapper js-arrow-infinity">
                         <button class="slider-button prev"><span class="icon-slider-arrow-left"></span></button>
                         <button class="main-button-shadow js-button" data-target="add-reviews">
                             <span class="text">оставить отзыв</span>
