--- a/clients.html
+++ b/clients.html
@@ -122,14 +122,8 @@
     <main class="our-clients">
         <section class="breadcrumbs">
             <div class="breadcrumbs__wrapper container">
-                <ul class="breadcrumbs__list">
-                    <li class="breadcrumbs__item">
-                        <a href="#">Главная</a>
-                    </li>
-                    <li class="breadcrumbs__item active">
-                        <a href="#">Наши клиенты</a>
-                    </li>
-                </ul>
+                <a href="#" class="breadcrumbs__link">Главная</a>
+                <a href="#" class="breadcrumbs__link">Наши клиенты</a>
             </div>
         </section>
         <section class="trust-us">
