--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="app">
-        <header class="header">
+         <header class="header">
             <div class="header__wrapper">
                 <nav class="header-nav">
                     <a href="#" class="header-logo">LOGO</a>
@@ -43,7 +43,7 @@
                                     <a href="#">План мероприятий 2020</a>
                                 </li>
                                 <li class="burger-menu__item">
-                                    <a href="#">Частозадаваемые вопросы</a>
+                                    <a href="#">Галерея</a>
                                 </li>
                             </ul>
                         </li>
@@ -104,7 +104,7 @@
                                     <a href="#">План мероприятий 2020</a>
                                 </li>
                                 <li class="burger-menu__item">
-                                    <a href="#">Частозадаваемые вопросы</a>
+                                    <a href="#">Галерея</a>
                                 </li>
                             </ul>
                             <ul class="burger-menu__list call-back">
