--- a/corporate-events.html
+++ b/corporate-events.html
@@ -117,14 +117,8 @@
         <main>
             <section class="breadcrumbs">
                 <div class="breadcrumbs__wrapper container">
-                    <ul class="breadcrumbs__list">
-                        <li class="breadcrumbs__item">
-                            <a href="#">Главная</a>
-                        </li>
-                        <li class="breadcrumbs__item active">
-                            <a href="#">Корпоративные мероприятия</a>
-                        </li>
-                    </ul>
+                    <a href="#" class="breadcrumbs__link">Главная</a>
+                    <a href="#" class="breadcrumbs__link">Корпоративные мероприятия</a>
                 </div>
             </section>
             <section class="corporate-events">
