--- a/faq.html
+++ b/faq.html
@@ -116,14 +116,8 @@
     <main>
         <section class="breadcrumbs">
             <div class="breadcrumbs__wrapper container">
-                <ul class="breadcrumbs__list">
-                    <li class="breadcrumbs__item">
-                        <a href="#">Главная</a>
-                    </li>
-                    <li class="breadcrumbs__item active">
-                        <a href="#">Частозадаваемые вопросы</a>
-                    </li>
-                </ul>
+                <a href="#" class="breadcrumbs__link">Главная</a>
+                <a href="#" class="breadcrumbs__link">Частозадаваемые вопросы</a>
             </div>
         </section>
         <section class="faq">
