--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         </li>
                     </ul>
                     <div class="burger-menu__wrapper">
-                        <button class="close-burger js-close">
+                        <button class="close-burger">
                             <span class="icon-close"></span>
                         </button>
                         <div class="wrapper">
