--- a/corporate-events.html
+++ b/corporate-events.html
@@ -408,34 +408,36 @@
         <button class="js-close close__popup">
             <span class="icon-close"></span>
         </button>
-        <h4 class="popup-caption">Предложить тему для проведения мероприятия</h4>
-        <form action="#" class="popup__form">
-            <div class="popup-inputs">
-                <label class="input_wrapper">
-                    <span class="input-caption">Контактное лицо</p>
-                    <input type="text" class="main_input" placeholder="Имя">
-                </label>
-                <label class="input_wrapper">
-                    <span class="input-caption">E-mail*</p>
-                    <input type="email" class="main_input" placeholder="ivanov@gmail.com" required>
-                </label>
-                <label class="input_wrapper">
-                    <span class="input-caption">Номер телефона*</p>
-                    <input type="tel" class="main_input" placeholder="+380934882556" required>
-                </label>
-                <label class="input_wrapper">
-                    <span class="input-caption">Полное название предприятия*</p>
-                    <input type="text" class="main_input" placeholder="Имя" required>
-                </label>
-                <label class="input_wrapper">
-                    <span class="input-caption">Ваше предложение</p>
-                    <textarea class="main_input main_input-textarea" placeholder="Опишите тему или программу мероприятия которое Вы хотели бы посетить. Опишите подробности, вопросы которые Вас интересуют"></textarea>
-                </label>
-            </div>
-            <button class="main_button-color js-button-decor">
-                <span class="text">Отправить</span>
-            </button> 
-        </form>
+        <div class="popup__wrapper">
+            <h4 class="popup-caption">Предложить тему для проведения мероприятия</h4>
+            <form action="#" class="popup__form">
+                <div class="popup-inputs">
+                    <label class="input_wrapper">
+                        <span class="input-caption">Контактное лицо</p>
+                        <input type="text" class="main_input" placeholder="Имя">
+                    </label>
+                    <label class="input_wrapper">
+                        <span class="input-caption">E-mail*</p>
+                        <input type="email" class="main_input" placeholder="ivanov@gmail.com" required>
+                    </label>
+                    <label class="input_wrapper">
+                        <span class="input-caption">Номер телефона*</p>
+                        <input type="tel" class="main_input" placeholder="+380934882556" required>
+                    </label>
+                    <label class="input_wrapper">
+                        <span class="input-caption">Полное название предприятия*</p>
+                        <input type="text" class="main_input" placeholder="Имя" required>
+                    </label>
+                    <label class="input_wrapper">
+                        <span class="input-caption">Ваше предложение</p>
+                        <textarea class="main_input main_input-textarea" placeholder="Опишите тему или программу мероприятия которое Вы хотели бы посетить. Опишите подробности, вопросы которые Вас интересуют"></textarea>
+                    </label>
+                </div>
+                <button class="main_button-color js-button-decor">
+                    <span class="text">Отправить</span>
+                </button> 
+            </form>
+        </div>
     </section>
     
     <!-- //Тема семинара  -->
